--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-button": "^1.2.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-form": "^4.0.1",
@@ -19,6 +20,7 @@
     "react-inputs-validation": "^4.7.0",
     "react-popup-alert": "^2.0.0",
     "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
     "simple-react-form": "^2.5.6",
