--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "simple-react-form": "^2.5.6",
     "validator": "^13.6.0",
