--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "history": "^4.10.1",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.6.0",
     "react-button": "^1.2.1",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
@@ -21,11 +22,13 @@
     "react-popup-alert": "^2.0.0",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "simple-react-form": "^2.5.6",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
